--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
     ],
 
     "background": {
-        "scripts": ["eventPage.js"],
+        "scripts": ["event_page.js"],
         "persistent": false
     },
 
